[package]
name = "transportation"
version = "2.0.0-dev1"
authors = ["Jenna Magius <pyrosim@gmail.com>"]
license = "BSD-2-Clause"
description = "A communications library"
documentation = "https://oxy-secure.app/doc/transportation/"
homepage = "https://oxy-secure.app"
repository = "https://github.com/oxy-secure/transportation"

[features]
encrypt = ["ring", "untrusted", "num", "lazy_static"]
protocol = ["serde", "serde_cbor"]

[dependencies]
mio = "0.6"
log = "0.4"
byteorder = "1"
num = { version = "0.1", optional = true }
ring = { version = "0.12", optional = true }
untrusted = {version = "0.5.1", optional = true }
serde = { version = "1.0", optional = true }
serde_cbor = { version = "0.8", optional = true }
lazy_static = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.11"
