cargo-features = ["edition"]

[package]
name = "transportation"
version = "4.0.0-dev"
authors = ["Jenna Magius <pyrosim@gmail.com>"]
license = "BSD-2-Clause"
description = "A wrapper around MIO that maps Tokens to callbacks"
repository = "https://github.com/oxy-secure/transportation"
edition = '2018'

[dependencies]
mio = "0.6"
lazy_static = "1"
num_cpus = "1"
